tests/paczka1/fuzzy1/58335038.err
Error in line 1: 5aITI A569 55,0
Error in line 3: 5aITI S266 53,7
Error in line 4: 5aITI S682 54,6
Error in line 7: fuDdnt S682 90,5
Error in line 9: fuDdnt S660 14,2
Error in line 6: 5aITI A569 74,3
Error in line 20: JNpMdK1g S266 83,8
